--- a/SmartMemo/res/layout/activity_realtime_memo.xml
+++ b/SmartMemo/res/layout/activity_realtime_memo.xml
@@ -19,7 +19,7 @@
             android:paddingLeft="10.0dip"
             android:paddingRight="10.0dip"
             android:paddingTop="10.0dip" >
-            
+
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -30,64 +30,7 @@
                 android:text="实时提醒"
                 android:textColor="@color/black"
                 android:textSize="16.0sp" />
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
 
-                <TableLayout
-                    android:id="@+id/MorePageTableLayout_Favorite"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:shrinkColumns="0"
-                    android:stretchColumns="0" >
-
-                    <TableRow
-                        android:id="@+id/account_management"
-                        android:layout_width="fill_parent"
-                        android:layout_marginLeft="2.0dip"
-                        android:layout_marginRight="2.0dip"
-                        android:background="@drawable/table_button_single_bg"
-                        android:paddingBottom="16.0dip"
-                        android:paddingTop="8.0dip" >
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" >
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:drawablePadding="10.0dip"
-                                android:gravity="center_vertical"
-                                android:includeFontPadding="false"
-                                
-                                android:text="重要程度"
-                                android:textColor="#ff333333"
-                                android:textSize="16.0sp" />
-
-                            <RatingBar
-                                android:id="@+id/rb_priority"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:stepSize="1" />
-
-                        </LinearLayout>
-
-                    </TableRow>
-                </TableLayout>
-            </LinearLayout>
-            
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10.0dip"
-                android:layout_marginTop="10.0dip"
-                android:gravity="center_vertical"
-                android:paddingLeft="4.0dip"
-                android:text=""
-                android:textColor="@color/black"
-                android:textSize="10.0sp" />
-            
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >
@@ -131,9 +74,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:ems="10" />
-
                         </LinearLayout>
-
                     </TableRow>
 
                     <TableRow
@@ -166,9 +107,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1" />
-
                         </LinearLayout>
-
                     </TableRow>
                 </TableLayout>
             </LinearLayout>
@@ -229,7 +168,54 @@
                     </TableRow>
                 </TableLayout>
             </LinearLayout>
-            
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10.0dip"
+                android:layout_marginTop="10.0dip"
+                android:gravity="center_vertical"
+                android:paddingLeft="4.0dip"
+                android:text="重要程度"
+                android:textColor="@color/black"
+                android:textSize="16.0sp" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <TableLayout
+                    android:id="@+id/MorePageTableLayout_Favorite"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:shrinkColumns="0"
+                    android:stretchColumns="0" >
+
+                    <TableRow
+                        android:id="@+id/account_management"
+                        android:layout_width="fill_parent"
+                        android:layout_marginLeft="2.0dip"
+                        android:layout_marginRight="2.0dip"
+                        android:background="@drawable/table_button_single_bg"
+                        android:paddingBottom="16.0dip"
+                        android:paddingTop="8.0dip" >
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            >
+
+                            <RatingBar
+                                android:id="@+id/rb_priority"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:numStars="5"
+                                
+                                android:stepSize="1" />
+                        </LinearLayout>
+                    </TableRow>
+                </TableLayout>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
