--- a/SmartMemo/res/layout/activity_unfinish.xml
+++ b/SmartMemo/res/layout/activity_unfinish.xml
@@ -1,9 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout 
-    android:id="@+id/content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/unfinish"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#F2F2F2" 
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,9 +11,11 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/listMemoList"
+            android:id="@+id/listViewUnfinish"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:visibility="visible" >
+
         </ListView>
 
     </LinearLayout>
