--- a/SmartMemo/res/layout/activity_personalinfo.xml
+++ b/SmartMemo/res/layout/activity_personalinfo.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
+            <TextView android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=""/>
 
             <EditText
                 android:id="@+id/et_info_name"
@@ -111,7 +112,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10" />
+                android:ems="10"
+                android:inputType="none" />
 
         </LinearLayout>
 
