--- a/SmartMemo/res/layout/activity_setuser.xml
+++ b/SmartMemo/res/layout/activity_setuser.xml
@@ -126,7 +126,7 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/btn_save_setuser"
+            android:id="@+id/btn_save_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
